# qiangs_financial

./: .env.example  .gitignore  Dockerfile  README.md  config.example.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: finpulse.yml
.opencode/agents/: financial-analyst.md
src/: __init__.py  cli.py  config.py
src/analyzer/: __init__.py  engine.py
src/collectors/: __init__.py  base.py  crypto.py  news.py  policy_collector.py  stocks.py
src/collectors/crawlers/: __init__.py  base_crawler.py  csrc_crawler.py  pbc_crawler.py
src/notifier/: __init__.py  dispatcher.py  telegram.py  wechat.py
src/scheduler/: __init__.py  monitor.py
